Feat: verify token after login
